--- a/classifier_test.ipynb
+++ b/classifier_test.ipynb
@@ -21,7 +21,6 @@
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn import svm\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score"
@@ -47,6 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cos config\n",
     "cos_credentials = {\n",
     "  \"apikey\": \"eUU7ks-YstaFkkEjoIVEsUkvU2_mUq-tcwfyQamY6kim\",\n",
     "  \"cos_hmac_keys\": {\n",
@@ -95,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get bucket or create anew bucket\n",
     "buckets = ['wktest3', 'wktest4']\n",
     "for bucket in buckets:\n",
     "    if not cos.Bucket(bucket) in cos.buckets.all():\n",
@@ -119,6 +120,7 @@
     }
    ],
    "source": [
+    "#show all buckets\n",
     "print(list(cos.buckets.all()))"
    ]
   },
@@ -171,9 +173,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#download file from the cos bucket\n",
     "bucket_name = buckets[0]\n",
     "bucket_obj = cos.Bucket(bucket_name)\n",
-    "bucket_obj.download_file('Kmeans_w_t.csv', './Kmeans_w_t.csv')\n"
+    "bucket_obj.download_file('Kmeans_w_t.csv', './Kmeans_w_t.csv')"
    ]
   },
   {
@@ -207,6 +210,7 @@
     }
    ],
    "source": [
+    "#download file from github\n",
     "!wget https://github.com/wk821917/wktest/archive/master.zip"
    ]
   },
@@ -270,6 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transform the dataset\n",
     "data_ready = data_ready.iloc[:,1:]"
    ]
   },
@@ -864,7 +869,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1369,6 +1376,7 @@
     }
    ],
    "source": [
+    "#classifier use knn\n",
     "num = 5\n",
     "knn = KNeighborsClassifier(n_neighbors=num)\n",
     "knn.fit(x_train,y_train)\n",
@@ -1387,90 +1395,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "Svm = svm.SVC(kernel='poly')#defualt 'rbf' the result is 0.999,linear 0.996,sigmoid 0.996,pre\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='poly',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Svm.fit(x_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_svm = Svm.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "accuracy_score(y_test,result_svm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True], dtype=bool)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(np.array(y_test)==result_svm)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1482,6 +1406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#classifier with naivebayes-gaussian\n",
     "guass = GaussianNB()"
    ]
   },
@@ -1547,6 +1472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#classifier with logistic\n",
     "logistic = LogisticRegression()"
    ]
   },
@@ -1615,6 +1541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#predict use knn \n",
     "output = knn.predict(data_unknow_test.iloc[:,:])"
    ]
   },
@@ -1637,6 +1564,7 @@
     }
    ],
    "source": [
+    "#add the result to the dataframe\n",
     "data_unknow_test['level'] = output"
    ]
   },
@@ -1646,6 +1574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#save the dataframe to csv file\n",
     "data_unknow_test.to_csv('./classifier_level.csv')"
    ]
   },
@@ -1655,6 +1584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#level - color dict\n",
     "color_dict = {1:'orange',2:'gray',3:'blue',4:'green',5:'purple'}#,5:'red',6:\"yellow\",7:'black',8:\"pink\"}"
    ]
   },
@@ -1664,6 +1594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#color_list for plot\n",
     "color_list = []\n",
     "for i in data_unknow_test.iloc[:,-1]:\n",
     "    color_list.append(color_dict[i])"
@@ -2718,26 +2649,9 @@
     }
    ],
    "source": [
-    "plt.scatter(data_unknow_test.index,data_unknow_test.iloc[:,-2],c = color_list,alpha=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fcadc2dae48>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.savefig('./classifier_level.png')"
+    "#save the picture\n",
+    "plt.scatter(data_unknow_test.index,data_unknow_test.iloc[:,-2],c = color_list,alpha=0.5)\n",
+    "plt.savefig('./classifi_level.png')"
    ]
   },
   {
@@ -2746,6 +2660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#upload the csv file and picture to the cos bucket\n",
     "bucket_name2 = buckets[1]\n",
     "bucket_obj2 = cos.Bucket(bucket_name2)"
    ]
@@ -2765,13 +2680,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket_obj2.upload_file('classifier_level.png', 'classifier_level.png')"
+    "bucket_obj2.upload_file('classifi_level.png', 'classifi_level.png')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.5",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2785,7 +2700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
