--- a/predict-test.ipynb
+++ b/predict-test.ipynb
@@ -9,43 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement not upgraded as not directly required: hickle in /opt/conda/envs/DSX-Python35/lib/python3.5/site-packages\n",
-      "Requirement not upgraded as not directly required: h5py in /opt/conda/envs/DSX-Python35/lib/python3.5/site-packages (from hickle)\n",
-      "Requirement not upgraded as not directly required: numpy in /opt/conda/envs/DSX-Python35/lib/python3.5/site-packages (from hickle)\n",
-      "Requirement not upgraded as not directly required: six in /opt/conda/envs/DSX-Python35/lib/python3.5/site-packages (from h5py->hickle)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install hickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import hickle as hkl"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#Change your own credential from wml service credentials channel\n",
     "wml_credentials = {\n",
     "  \"apikey\": \"pTnqNZ0XAffootUTOqc1XMomvp4I3EbyaSd8AkbiZ21g\",\n",
     "  \"iam_apikey_description\": \"Auto generated apikey during resource-key operation for Instance - crn:v1:bluemix:public:pm-20:us-south:a/4171c5a3fdf4490ba445218f5bcdea3a:760eae04-56a0-43a8-b03b-f8debca2d81e::\",\n",
@@ -168,6 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define the wml client\n",
     "client = WatsonMachineLearningAPIClient(wml_credentials)"
    ]
   },
@@ -187,6 +158,7 @@
     }
    ],
    "source": [
+    "#define wml sucessful\n",
     "print(client.version)"
    ]
   },
@@ -252,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#change your own credential from cos credentials channel ,when you create the credentials ,use {'HMAC':ture} as the json string\n",
     "\n",
     "cos_credentials = {\n",
     "  \"apikey\": \"eUU7ks-YstaFkkEjoIVEsUkvU2_mUq-tcwfyQamY6kim\",\n",
@@ -279,6 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the values' from cos service endpiont channel \n",
     "service_endpoint = 'https://s3-api.us-geo.objectstorage.softlayer.net'"
    ]
   },
@@ -297,6 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cos config\n",
     "cos = ibm_boto3.resource ('s3',\n",
     "                         ibm_api_key_id=api_key,\n",
     "                         ibm_service_instance_id=service_instance_id,\n",
@@ -311,6 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make new buckets when the bucket is not exists ,\n",
+    "#change your own bucket name\n",
     "buckets = ['wktest1', 'predict']\n",
     "for bucket in buckets:\n",
     "    if not cos.Bucket(bucket) in cos.buckets.all():\n",
@@ -337,6 +313,7 @@
     }
    ],
    "source": [
+    "#get the all bucket list\n",
     "print(list(cos.buckets.all()))"
    ]
   },
@@ -402,6 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#change your own bucket name\n",
     "name = 'wktest2'\n",
     "bucket_obj = cos.Bucket(name)"
    ]
@@ -429,6 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#change the training_id which you have trained before\n",
     "bucket_obj.download_file('training-o3hdtoFiR/model/lstm.json', './lstm.json')\n",
     "bucket_obj.download_file('training-o3hdtoFiR/weight/weight.hdf5', './weight.hdf5')"
    ]
@@ -454,26 +433,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# name1 = 'predict'\n",
-    "# bucket_obj1 = cos.Bucket(name1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bucket_obj1.upload_file('./lstm.json', 'lstm.json')\n",
-    "# bucket_obj1.upload_file('./weight.hdf5', 'weight.hdf5')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -492,6 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#training config\n",
     "metadata = {\n",
     "    client.repository.DefinitionMetaNames.NAME              : \"python-client-tutorial_training-definition\",\n",
     "    client.repository.DefinitionMetaNames.AUTHOR_EMAIL      : \"wk821917@163com\",\n",
@@ -499,8 +459,7 @@
     "    client.repository.DefinitionMetaNames.FRAMEWORK_VERSION : \"1.5\",\n",
     "    client.repository.DefinitionMetaNames.RUNTIME_NAME      : \"python\",\n",
     "    client.repository.DefinitionMetaNames.RUNTIME_VERSION   : \"3.5\",\n",
-    "    client.repository.DefinitionMetaNames.EXECUTION_COMMAND : \"python3 wktest-master/predict_lstm.py\"#--trainImagesFile ${DATA_DIR}/train-images-idx3-ubyte.gz --trainLabelsFile ${DATA_DIR}/train-labels-idx1-ubyte.gz --testImagesFile ${DATA_DIR}/t10k-images-idx3-ubyte.gz --testLabelsFile ${DATA_DIR}/t10k-labels-idx1-ubyte.gz --learningRate 0.001 --trainingIters 20000\"\n",
-    "}"
+    "    client.repository.DefinitionMetaNames.EXECUTION_COMMAND : \"python3 wktest-master/predict_lstm.py\""
    ]
   },
   {
@@ -524,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -550,6 +511,7 @@
     }
    ],
    "source": [
+    "# download code from github\n",
     "!wget https://github.com/wk821917/wktest/archive/master.zip"
    ]
   },
@@ -656,6 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make the training zip \n",
     "!zip -q -r master-add.zip wktest-master/"
    ]
   },
@@ -713,6 +676,7 @@
     }
    ],
    "source": [
+    "#define the training_file\n",
     "definition_details = client.repository.store_definition( \"master-add.zip\", meta_props=metadata )\n",
     "definition_uid     = client.repository.get_definition_uid( definition_details )\n",
     "print( \"definition_uid: \", definition_uid )"
@@ -724,6 +688,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#define the training_dir and resul _dir\n",
+    "#change the access-key the same as the one in cos credentials,change the bucket name \n",
     "metadata = {\n",
     "client.training.ConfigurationMetaNames.NAME         : \"python-client-tutorial_training-run\",\n",
     "client.training.ConfigurationMetaNames.AUTHOR_EMAIL : \"wk281917@163.com\",\n",
@@ -766,6 +732,7 @@
     }
    ],
    "source": [
+    "#create the training and return the training_id\n",
     "run_details = client.training.run( definition_uid, meta_props=metadata )\n",
     "run_uid     = client.training.get_run_uid( run_details )\n",
     "print( \"run_uid: \", run_uid )"
@@ -889,6 +856,7 @@
     }
    ],
    "source": [
+    "#get the status once or per 10 seconds\n",
     "import time\n",
     "while 1:\n",
     "    print(client.training.get_status( run_uid ))\n",
@@ -939,7 +907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.5",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -953,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
