--- a/IBM_ML_KMeans_Test.ipynb
+++ b/IBM_ML_KMeans_Test.ipynb
@@ -65,6 +65,7 @@
     }
    ],
    "source": [
+    "#download the program and dataset from github \n",
     "!pip install wget\n",
     "!rm master.zip\n",
     "!rm -r wktest-master/\n",
@@ -97,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('wktest-master//water-tilt.csv')"
+    "data = pd.read_csv('wktest-master/water-tilt.csv')"
    ]
   },
   {
@@ -137,6 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#calculate quadratic sum of xtilt and ytilt\n",
     "data_calcu = data.iloc[:,0]**2+data.iloc[:,1]**2"
    ]
   },
@@ -164,7 +166,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -523,6 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#define kmeans with five clusters\n",
     "kmeans = KMeans(n_clusters=5)"
    ]
   },
@@ -545,6 +548,7 @@
     }
    ],
    "source": [
+    "#train with the calcukate data\n",
     "kmeans.fit(DataFrame(data_calcu))"
    ]
   },
@@ -576,6 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#add 'kind' and 'calcu' column\n",
     "data['kind'] = kmeans.predict(DataFrame(data_calcu))\n",
     "data['calcu'] = data_calcu"
    ]
@@ -1129,6 +1134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make connection between color and kind\n",
     "color_dict = {0:'orange',1:'gray',2:'blue',3:'green',4:'purple'}#,5:'red',6:\"yellow\",7:'black',8:\"pink\"}"
    ]
   },
@@ -1138,6 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#color for plot\n",
     "color_list = []\n",
     "for i in data.iloc[:,-2]:\n",
     "    color_list.append(color_dict[i])"
@@ -2181,22 +2188,7 @@
    ],
    "source": [
     "plt.scatter(data.index,data.iloc[:,-1],alpha=0.3,c=np.array(color_list))\n",
-    "plt.savefig('./Kmeans_w_t.png')\n",
-    "# plt.plot(np.array([data.iloc[0,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='orange')\n",
-    "# plt.plot(np.array([data.iloc[2,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c = 'blue')\n",
-    "# plt.plot(np.array([data.iloc[96,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha =0.7,c='green',linestyle='--')\n",
-    "# plt.plot(np.array([i for i in data.iloc[:,0]]),np.array([data.iloc[96,1] for i in range(5000)]),alpha=0.7,c='green',linestyle='--',linewidth = 0.5)\n",
-    "# plt.plot(np.array([data.iloc[169,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='pink')\n",
-    "# plt.plot(np.array([i for i in data.iloc[:,0]]),np.array([data.iloc[169,1] for i in range(5000)]),alpha=0.7,c='pink',linewidth = 0.5)\n",
-    "# plt.plot(np.array([data.iloc[367,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='purple')\n",
-    "# plt.plot(np.array([data.iloc[479,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='red',linewidth = 0.5)\n",
-    "# plt.plot(np.array([i for i in data.iloc[:,0]]),np.array([data.iloc[479,1] for i in range(5000)]),alpha=0.7,c='red',linewidth = 0.5)\n",
-    "# plt.plot(np.array([data.iloc[521,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='black',linestyle='-.')\n",
-    "# plt.plot(np.array([i for i in data.iloc[:,0]]),np.array([data.iloc[521,1] for i in range(5000)]),alpha=0.7,c='black',linestyle='-.')\n",
-    "# plt.plot(np.array([data.iloc[988,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='gray',linestyle=':')\n",
-    "# plt.plot(np.array([i for i in data.iloc[:,0]]),np.array([data.iloc[988,1] for i in range(5000)]),alpha=0.7,c='gray',linestyle=':')\n",
-    "# plt.plot(np.array([data.iloc[1052,0] for i in range(5000)]),np.array([i for i in data.iloc[:,1]]),alpha = 0.7,c='yellow')\n",
-    "# plt.plot(np.array([i for i in data.iloc[:,0]]),np.array([data.iloc[1052,1] for i in range(5000)]),alpha=0.7,c='yellow')"
+    "plt.savefig('./Kmeans_w_t.png')"
    ]
   },
   {
@@ -2748,21 +2740,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#show the relationship between kind and calcu\n",
     "kdmin_dict = {}\n",
     "for i in range(5):\n",
     "    kdmin_dict[float(data[data['kind']==i].iloc[:,-1].max())] = i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# kdmin_odict = OrderedDict(kdmin_dict)\n",
-    "# kdmin_odict"
    ]
   },
   {
@@ -2804,6 +2785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#define 'level' column and fill with None\n",
     "data['level'] = np.nan"
    ]
   },
@@ -3466,6 +3448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#calculate level depends on kind and min(calcu[kind])\n",
     "for i in range(5,0,-1):    \n",
     "    for j in (data[data['kind']==kdmin_dict[min(kdmin_dict.keys())]].index):\n",
     "        data.iloc[j,-1] = int(i)\n",
@@ -4194,6 +4177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cos config\n",
     "cos_credentials = {\n",
     "  \"apikey\": \"eUU7ks-YstaFkkEjoIVEsUkvU2_mUq-tcwfyQamY6kim\",\n",
     "  \"cos_hmac_keys\": {\n",
@@ -4242,6 +4226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create a new bucket\n",
     "bucketname = 'wktest3'\n",
     "if not cos.Bucket(bucketname) in cos.buckets.all():\n",
     "    print('Creating bucket \"{}\"...'.format(bucketname))\n",
@@ -4265,6 +4250,7 @@
     }
    ],
    "source": [
+    "#show all buckets\n",
     "print(list(cos.buckets.all()))"
    ]
   },
@@ -4313,6 +4299,7 @@
     }
    ],
    "source": [
+    "#upload the result to cos\n",
     "bucket_name = bucketname\n",
     "bucket_obj = cos.Bucket(bucket_name)\n",
     "data_dir = 'data_dir'\n",
@@ -4325,7 +4312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.5",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4339,7 +4326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
